Removed stray horizontal scrolling from mobile, stuck nav to top permanently, fixed random scrolling in work section, fixed video jumbo destroying everything

--- a/assets/css/fliznav.css
+++ b/assets/css/fliznav.css
@@ -3,7 +3,7 @@
 	position: fixed;
 	top: 0;
 	height: 70px;
-	z-index: 1;
+	z-index: 999 !important;
 }
 /* Navigation Settings */
 nav {
@@ -13,6 +13,7 @@ nav {
   text-align: center;
 	height: 70px;
 	background: #fff;
+	z-index: 999 !important;
 }
 
 nav .nav-link {
