--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -28,6 +28,11 @@ a {
   color: black;
 }
 
+body, html {
+  position: relative;
+  overflow-x: hidden !important;
+}
+
 body {
   overflow-x: hidden !important;
   background-attachment: scroll;
@@ -35,6 +40,9 @@ body {
   background-color: #fff !important;
 }
 
+section {
+  overflow-y: hidden;
+}
 
 #bgvid {
   position: absolute;
@@ -44,7 +52,6 @@ body {
   top: 0;
   z-index: -25;
   overflow-x: hidden !important;
-
   overflow-y: hidden !important;
   background: url(../imgs/timber-cove-jumbo.mp4);
   object-fit: cover;
@@ -145,16 +152,6 @@ body {
   font-weight: 300;
 }
 
-#landing {
-  overflow-x: hidden !important;
-  width: 100%;
-  height: 100vh;
-  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(125, 185, 232, 0) 100%);
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(125, 185, 232, 0) 100%);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(125, 185, 232, 0) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#65696d', endColorstr='#007db9e8', GradientType=0);
-}
-
 .video-overlay {
   position: absolute;
   top: 0px;
@@ -236,9 +233,13 @@ body {
 }
 
 #landing {
+  position: absolute;
+  width: 100vw;
+  min-height: 100vh;
+  top: 0px;
+  left: 0px;
   overflow-x: hidden !important;
-  width: 100%;
-  height: 100vh;
+  overflow-y: hidden !important;
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(125, 185, 232, 0) 100%);
   background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(125, 185, 232, 0) 100%);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(125, 185, 232, 0) 100%);
@@ -420,7 +421,7 @@ body {
   height: 10vh;
   left: 50%;
   transform: rotate(2deg) translate(-50%, -50%);
-  z-index: 0;
+  z-index: 9;
   background-color: white;
   background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../imgs/header-background-image.jpeg);
   background-size: cover;
